[package]
name = "dht_rs"
version = "0.1.0"
authors = ["xh-gotz9 <xh353127981@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["full"] }
rand = "0.8.0"
hex = "0.4.2"
fraux_rs = {path = "./fraux_rs"}